force-app/main/default/objects/Club_Collection_Wall__c/Club_Collection_Wall__c.object-meta.xml
<CustomObject>
    <label>Club Collection Wall</label>
    <nameField>
        <label>Club Collection Wall Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Collection Walls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>