force-app/main/default/objects/Club_Collection_Wall__c/fields/clubMemberId__c.field-meta.xml
<CustomField>
    <fullName>clubMemberId__c</fullName>
    <label>Club Member</label>
    <referenceTo>Club_MemberShip__c</referenceTo>
    <relationshipLabel>Club Collection Walls</relationshipLabel>
    <relationshipName>Club_Collection_Wall</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>