force-app/main/default/objects/Club_Collection_Wall__c/fields/Collection_Wall_Sku__c.field-meta.xml
<CustomField>
    <fullName>Collection_Wall_Sku__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchased Product</label>
    <referenceTo>PPR_PurchProduct__c</referenceTo>
    <relationshipLabel>Club Collection Walls (Collection Wall Sku)</relationshipLabel>
    <relationshipName>Club_Collection_Walls1</relationshipName>
    <type>Lookup</type>
</CustomField>