force-app/main/default/objects/Club_Collection_Wall__c/fields/collectionWallSku__c.field-meta.xml
<CustomField>
    <fullName>collectionWallSku__c</fullName>
    <formula>Collection_Wall_Sku__r.RMSSKUCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU</label>
    <type>Text</type>
</CustomField>