force-app/main/default/objects/Club_Collection_Wall__c/fields/collectionWallSkuOrder__c.field-meta.xml
<CustomField>
    <fullName>collectionWallSkuOrder__c</fullName>
    <label>Preference Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>