force-app/main/default/objects/Club_Collection_Wall__c/fields/purchaseDate__c.field-meta.xml
<CustomField>
    <fullName>purchaseDate__c</fullName>
    <formula>Collection_Wall_Sku__r.PurchaseDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Date</label>
    <type>DateTime</type>
</CustomField>