force-app/main/default/objects/Club_Collection_Wall__c/fields/uniqueKey__c.field-meta.xml
<CustomField>
    <fullName>uniqueKey__c</fullName>
    <label>Unique Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>