force-app/main/default/objects/Club_Collection_Wall__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>clubMemberId__c</columns>
    <columns>collectionWallSku__c</columns>
    <columns>purchaseDate__c</columns>
    <columns>collectionWallSkuOrder__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>